# weather-api-service

./: .coveragerc  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/weather_api_service/: api.py  service.py
tests/: test_api.py  test_service.py
