
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-api-service"
version = "0.1.0"
description = "Sample weather API service (self-contained)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=weather_api_service --cov-report=term-missing --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["weather_api_service"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
