[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-api-service"
version = "0.1.0"
description = "Sample weather API service (self-contained)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.0.0",
]

# --- IMPORTANT FOR src/ LAYOUT ---
# Tell setuptools that packages live under src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- pytest config ---
[tool.pytest.ini_options]
# Ensure src/ is on sys.path during collection/execution in CI
pythonpath = ["src"]
testpaths = ["tests"]

# Enforce deterministic line coverage (not branch coverage)
addopts = "-q --cov=weather_api_service --cov-report=term-missing"

# --- coverage config ---
[tool.coverage.run]
source = ["weather_api_service"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
